creacion y eliminacion de tarea
:white_check_mark: Ver un listado de tareas (Por hacer y terminadas).
:white_check_mark: Crear una tarea nueva
:white_check_mark: Marcar una tarea como terminada.
:white_check_mark: eliminar tareas individuales
:white_check_mark: limpiar tareas terminadas
:white_check_mark: persistencia de datos

:clipboard: cada tarea debe contener una imagen
:clipboard: diseno completamente adaptable

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,26 @@
 <ion-app>
   <ion-split-pane contentId="main-content">
     <ion-menu contentId="main-content" type="overlay">
+      <ion-toolbar  class="ion-padding">
+        <div class="row margin-0 center-xs">
+          <img src="https://cdn.pixabay.com/photo/2016/11/18/23/38/child-1837375_960_720.png" class="avatar-64">
+        </div>
+        <div class="row margin-0 center-xs">
+          <ion-text>
+            <small>{{user ? user["email"] : 'invitado'}}</small>
+          </ion-text>
+        </div>
+        </ion-toolbar>
       <ion-content>
+
+        
+
         <ion-list id="inbox-list">
-          <ion-list-header>Inbox</ion-list-header>
-          <ion-note>hi@ionicframework.com</ion-note>
+         
 
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
             <ion-item (click)="selectedIndex = i" routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" [class.selected]="selectedIndex == i">
-              <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
+              <ion-icon slot="start" [src]="p.src" size="large" ></ion-icon>
               <ion-label>{{ p.title }}</ion-label>
             </ion-item>
           </ion-menu-toggle>
