--- a/src/app/formulario-tarea/formulario-tarea.component.html
+++ b/src/app/formulario-tarea/formulario-tarea.component.html
@@ -4,6 +4,7 @@
     <ion-text color="primary"><h4>Registrar tarea</h4></ion-text>
   </div>
   <mat-dialog-content>
+   
     <div class="row center-xs">
       <mat-form-field class="w-172" appearance="outline">
         <mat-label>Nombre (*)</mat-label>
@@ -14,6 +15,17 @@
         <mat-label>Nombre (*)</mat-label>
         <input matInput placeholder="Descripcion (*)"  formControlName="descripcion">
       </mat-form-field>      
+
+      <div class="row col-xs-12 magrin-0 center-xs">
+        <ion-fab-button size="small" (click)="fileInput.click()">
+          
+          <ion-icon  name="camera" ></ion-icon>
+        </ion-fab-button>
+      
+      <input hidden (change)="cargarImagen(fileInput.files)" #fileInput type="file"  id="file" accept="image/*">
+      </div>
+        
+      
     </div>
   </mat-dialog-content>
 
