--- a/src/app/tarea/tarea.page.html
+++ b/src/app/tarea/tarea.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons  slot="start">
+      <ion-back-button defaultHref="/tareas"></ion-back-button>
+    </ion-buttons>
     <ion-title>tarea</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -38,7 +41,7 @@
           <ion-card class=" borde-radio-10 padding-0 margin-horizontal-2porcent margin-vertical-8"  mode="ios">
             <ion-card-header class="start-xs text-capitalize" >
                 <div class="row margin-0 start-xs middle-xs">
-                  <img src="/assets/008-interview.svg" class="avatar-50">
+                  <img [src]="tarea.urlImagen || '/assets/008-interview.svg' " class="avatar-50">
                   <div class="col-xs">
                     <div class="box">
                       <ion-card-subtitle mode="ios" color="primary" >{{tarea?.nombre}}</ion-card-subtitle>
