--- a/src/app/tarea/tarea.page.html
+++ b/src/app/tarea/tarea.page.html
@@ -36,7 +36,7 @@
 
   <div *ngIf="tarea !== undefined && keys(tarea).length > 0" >
     <div class="row margin-0 center-xs start-lg">
-      <div class="col-xs-12 col-lg-3 padding-0">
+      <div class="col-xs-12 col-sm-8 col-md-6 col-lg-4 padding-0">
         <div class="box">
           <ion-card class=" borde-radio-10 padding-0 margin-horizontal-2porcent margin-vertical-8"  mode="ios">
             <ion-card-header class="start-xs text-capitalize" >
