paleta de color cambiada

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <ion-app>
   <ion-split-pane contentId="main-content">
     <ion-menu contentId="main-content" type="overlay">
-      <ion-toolbar  class="ion-padding">
+      <ion-toolbar color="secondary" class="ion-padding">
         <div class="row margin-0 center-xs">
           <img src="https://cdn.pixabay.com/photo/2016/11/18/23/38/child-1837375_960_720.png" class="avatar-64">
         </div>
