--- a/src/app/formulario-tarea/formulario-tarea.component.html
+++ b/src/app/formulario-tarea/formulario-tarea.component.html
@@ -19,7 +19,7 @@
       <div class="row col-xs-12 magrin-0 center-xs">
         <ion-fab-button size="small" (click)="fileInput.click()">
           
-          <ion-icon  name="iamge" ></ion-icon>
+          <ion-icon  name="image" ></ion-icon>
         </ion-fab-button>
       
       <input hidden (change)="cargarImagen(fileInput.files)" #fileInput type="file"  id="file" accept="image/*">
